@startuml CoreWindowPhase2Class
skinparam classAttributeIconSize 0

package "xconv2" {
  class CFVCore
}

package "xconv2.main_window" {
  class CFVMain
}

package "xconv2.ui" {
  class MenuController
  class SettingsStore
  class SelectionController
  class FieldMetadataController
}

CFVMain --|> CFVCore
CFVCore o-- MenuController : menus\nrecent UI
CFVCore o-- SettingsStore : settings\npersistence
CFVCore o-- SelectionController : slider\ncollapse state
CFVCore o-- FieldMetadataController : fields\nproperties UI
@enduml

@startuml CoreWindowPhase2SelectionSequence
actor User
participant CFVCore
participant SelectionController
participant CFVMain as WorkerBridge
participant Worker

User -> CFVCore : move range slider
CFVCore -> SelectionController : on_range_slider_moved(name)
SelectionController -> SelectionController : update_range_labels()
SelectionController -> SelectionController : refresh_plot_summary()
CFVCore -> WorkerBridge : _request_plot_update()
WorkerBridge -> Worker : send plot task
@enduml
